Improve material source
also ddstoktx converter that ktx files end in _ktx.bsa